# cytrus

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md
CMakeModules/: BundleTarget.cmake  DownloadExternals.cmake  GenerateBuildInfo.cmake
hooks/: pre-commit
src/: CMakeLists.txt
src/android/: .gitignore  build.gradle.kts  code-style-java.xml
src/android/app/: build.gradle.kts
src/audio_core/: CMakeLists.txt  cubeb_input.cpp  cubeb_sink.cpp  openal_sink.cpp  sdl2_sink.cpp  sdl3_sink.cpp
src/common/: CMakeLists.txt  scm_rev.cpp.in
src/common/x64/: cpu_detect.cpp  cpu_detect.h  xbyak_abi.h  xbyak_util.h
src/core/: CMakeLists.txt
src/cytrus/: CMakeLists.txt  config.cpp  config.h  cytrus.cpp  cytrus.rc  default_ini.h
src/cytrus/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2.h  emu_window_sdl2_gl.cpp  emu_window_sdl2_gl.h  emu_window_sdl2_sw.cpp  emu_window_sdl2_sw.h  emu_window_sdl2_vk.cpp  emu_window_sdl2_vk.h  emu_window_sdl3.cpp  emu_window_sdl3.h  emu_window_sdl3_gl.cpp  emu_window_sdl3_gl.h  emu_window_sdl3_sw.cpp  emu_window_sdl3_sw.h  emu_window_sdl3_vk.cpp  emu_window_sdl3_vk.h
src/cytrus_qt/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.ui  bootmanager.cpp  compatdb.cpp  compatdb.ui  compatibility_list.cpp  cytrus-qt.rc  discord_impl.cpp  discord_impl.h  game_list.cpp  game_list.h  game_list_p.h  game_list_worker.cpp  game_list_worker.h  hotkeys.cpp  loading_screen.cpp  main.cpp  main.h  main.ui  qt_image_interface.cpp
src/cytrus_qt/applets/: mii_selector.cpp  swkbd.cpp
src/cytrus_qt/camera/: camera_util.cpp  qt_camera_base.cpp  qt_camera_base.h  qt_multimedia_camera.cpp  qt_multimedia_camera.h  still_image_camera.cpp  still_image_camera.h
src/cytrus_qt/configuration/: config.cpp  config.h  configuration_shared.cpp  configure.ui  configure_audio.cpp  configure_camera.cpp  configure_cheats.cpp  configure_debug.cpp  configure_dialog.cpp  configure_enhancements.cpp  configure_general.cpp  configure_graphics.cpp  configure_hotkeys.cpp  configure_input.cpp  configure_motion_touch.cpp  configure_per_game.cpp  configure_per_game.h  configure_storage.cpp  configure_system.cpp  configure_touch_from_button.cpp  configure_touch_from_button.ui  configure_ui.cpp  configure_web.cpp  configure_web.ui
src/cytrus_qt/debugger/: console.cpp  lle_service_modules.cpp  profiler.cpp  registers.cpp  wait_tree.cpp
src/cytrus_qt/multiplayer/: host_room.h  (+11 more)
src/dedicated_room/: CMakeLists.txt  cytrus-room.cpp
src/input_common/: CMakeLists.txt
src/network/: CMakeLists.txt  announce_multiplayer_session.cpp
src/tests/: CMakeLists.txt
src/video_core/: CMakeLists.txt
src/web_service/: CMakeLists.txt
(+218 files in other folders)
